# cebackup

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
cebackup/: __init__.py  backup.py  config.py  hooks.py  main.py
examples/: cebackup.yaml
examples/hooks/: crontab.sh  example_backup_hook.sh  post_notify.sh  post_op5_monitor.py  pre_copy_root_files.sh  pre_find_dirs_cebackup.sh  root_files.sh
systemd/: cebackup.service  cebackup.timer
tests/: conftest.py  test_backup.py  test_config.py  test_hooks.py  test_integration.py
tests/data/: gpg.pub
