[tool.poetry]
name = "cebackup"
version = "0.2.5"
description = "Configurable encrypted backup tool"
authors = ["Aksel Sjögren <asjogren@itrsgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
black = "^21.12b0"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
"cebackup" = "cebackup.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
log_level = "DEBUG"
markers = [
    "subprocess: test runs external tools in subprocesses (deselect with '-m \"not subprocess\"')",
]
